# grads

./: .gitignore  bptt.ipynb  bptt.py  main.ipynb  main.py  pyproject.toml
grads/: evaluator.py  helpers.py  main.py  networks.py
