[tool.poetry]
name = "grads"
version = "0.1.0"
description = ""
authors = ["Roman Knyazhitskiy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cuda12-pip"], version = "^0.4.31"}
equinox = "^0.11.5"
jaxtyping = "^0.2.33"
beartype = "^0.18.5"
optax = "^0.2.3"
brax = "^0.10.5"
matplotlib = "^3.9.2"
wandb = "^0.17.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
